Fix scrollbar making content shift

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -5,6 +5,11 @@
     --fontWeightRegular: 400;
 }
 
+html {
+    /* make scrollbar overlay over the content, not taking up any space */
+    overflow-y: overlay;
+}
+
 h1,
 h2,
 h3,
